<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tiemy.android.br.com.beersplitapp.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogin"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:layout_below="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLogin"
        android:hint="@string/hint_login"/>

    <TextView
        android:layout_below="@+id/etLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSenha"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:layout_below="@+id/tvSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSenha"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"/>

    <CheckBox
        android:layout_below="@+id/etSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cbConectado"
        android:text="@string/manter_conectado"/>

    <Button
        android:layout_below="@+id/cbConectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="logar"
        android:text="@string/log_in"/>

    <com.facebook.login.widget.LoginButton
        android:layout_below="@+id/button"
        android:id="@+id/login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

</RelativeLayout>
